--- a/sass/theme/layout/_footer.scss
+++ b/sass/theme/layout/_footer.scss
@@ -1,14 +1,26 @@
 #wrapper-footer {
-	position: sticky;
+	@include media-breakpoint-up(md) {
+		position: sticky;
+		padding: 6rem 0;
+		text-align: left;
+	}
+	position: relative;
 	bottom: 0;
 	left: 0;
 	width: 100%;
 	z-index: 0;
-	padding: 6rem 0;
+	padding: 3rem 0;
 	background-image: url('/wp-content/themes/rtf/images/footer.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
 	color: $white;
+	text-align: center;
+
+	@include media-breakpoint-down(md) {
+		hr.divider.blue {
+			margin: 2rem auto;
+		}
+	}
 }
 
 .footer-logo {
@@ -23,6 +35,7 @@
 }
 
 .footer-social {
+	margin-bottom: 2rem;
 	a {
 		color: $darkgrey;
 
