--- a/sass/theme/layout/_header.scss
+++ b/sass/theme/layout/_header.scss
@@ -39,13 +39,6 @@
 		}
 	}
 
-	.open-nav {
-		transition: .3s;
-		@include media-breakpoint-down(md) {
-			background: rgba(0,0,0, .95);
-		}
-	}
-
 	.home-arrow {
 		position: absolute;
 		bottom: 1rem;
@@ -64,16 +57,34 @@
 
 .site-header {
 	position: relative;
-	min-height: 30vh;
+	min-height: 40vh;
+	@include media-breakpoint-up(md) {
+		min-height: 30vh;
+	}
 	background-color: $darkgrey;
 	background-image: url('/wp-content/themes/rtf/images/header1.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
 
+	.open-nav {
+		transition: .3s;
+		@include media-breakpoint-down(md) {
+			background: rgba(0,0,0, .95);
+		}
+	}
+
 	.page-heading {
 		color: $white;
 		text-align: center;
+	}
+
+	h1 {
+		font-size: 2rem;
+		@include media-breakpoint-up(md) {
+			font-size: 2.5rem;
+		}
+		
 	}
 }
 
@@ -89,7 +100,10 @@
 }
 
 #wrapper-navbar {
-	padding: 1rem 3rem;
+	padding: 1rem;
+	@include media-breakpoint-up(md) {
+		padding: 1rem 3rem;
+	}
 	transition: .3s;
 	z-index: 99999;
 
