--- a/sass/theme/_child_theme_variables.scss
+++ b/sass/theme/_child_theme_variables.scss
@@ -29,3 +29,4 @@ $headings-font-family: "Effra", Arial, sans-serif;
 $line-height-base: 2;
 
 $navbar-nav-link-padding-x: 1rem !default;
+$enable-responsive-font-sizes: true;
