reduce height of uk page header

--- a/sass/theme/layout/_header.scss
+++ b/sass/theme/layout/_header.scss
@@ -57,6 +57,14 @@
 	}
 }
 
+.home .site-header {
+	min-height: 80vh;
+}
+
+.page-template-homepage-uk .site-header {
+	min-height: 50vh;
+}
+
 .site-header {
 	position: relative;
 	min-height: 40vh;
