--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -12488,6 +12488,12 @@ body {
       -webkit-animation: pulse 500ms alternate infinite ease-in;
               animation: pulse 500ms alternate infinite ease-in; }
 
+.home .site-header {
+  min-height: 80vh; }
+
+.page-template-homepage-uk .site-header {
+  min-height: 50vh; }
+
 .site-header {
   position: relative;
   min-height: 40vh;
