--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -12623,13 +12623,15 @@ body {
 .home #full-width-page-wrapper {
   padding: 6rem 0; }
 
+.home .panel-block {
+  -webkit-filter: grayscale(1);
+          filter: grayscale(1); }
+
 .panel-block {
   margin-bottom: 2rem;
   padding: 4rem 0;
   border: 0;
   border-radius: 8px;
-  -webkit-filter: grayscale(1);
-          filter: grayscale(1);
   -webkit-box-shadow: 0 7px 20px rgba(27, 27, 26, 0.16);
           box-shadow: 0 7px 20px rgba(27, 27, 26, 0.16);
   background-position: center;
