--- a/sass/theme/templates/_homepage.scss
+++ b/sass/theme/templates/_homepage.scss
@@ -2,12 +2,15 @@
 	padding: 6rem 0;
 }
 
+.home .panel-block {
+	filter: grayscale(1);
+}
+
 .panel-block {
 	margin-bottom: 2rem;
 	padding: 4rem 0;
 	border: 0;
 	border-radius: 8px;
-	filter: grayscale(1);
 	box-shadow: 0 7px 20px rgba(27, 27, 26, .16);
 	background-position: center;
 	transition: .2s;
