--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -16,6 +16,7 @@
 @import "templates/products-single";
 
 // Components
+@import "components/buttons";
 @import "components/animations";
 @import "components/colors";
 @import "components/cta";
