--- a/sass/theme/components/_cta.scss
+++ b/sass/theme/components/_cta.scss
@@ -1,6 +1,7 @@
 .btn {
 	padding: .5rem 1.5rem;
-	font-family: $headings-font-family;
+	font-family: $font-family-base;
+	font-weight: bold;
 	letter-spacing: 1px;
 
 
