--- a/sass/theme/layout/_header.scss
+++ b/sass/theme/layout/_header.scss
@@ -23,7 +23,8 @@
 }
 
 .home .site-header,
-.page-template-homepage-uk .site-header {
+.page-template-homepage-uk .site-header,
+.page-template-page-with-header-slider .site-header {
 	min-height: 80vh;
 	background-image: initial;
 
